k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  labels:
    app: laravel
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: laravel
